...
            "state": "translated",
            "value": "Editar"
          }
        }
      }
    },
    "Edit game": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Изменить игру"
          }
...
            "state": "translated",
            "value": "Caminhada"
          }
        }
      }
    },
    "Home": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Главная"
          }
...
            "state": "translated",
            "value": "Foi eliminada antes de a sua resposta ser enviada."
          }
        }
      }
    },
    "Join": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Присоединиться"
          }
...
              }
            }
          }
        }
      }
    },
    "New game": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Новая игра"
          }
...
            "state": "translated",
            "value": "Não é preciso convite."
          }
        }
      }
    },
    "No limit: anyone can join.": {
      "localizations": {
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Без ограничения: присоединиться может любой."
          }
...
